--- a/views/administracion.ejs
+++ b/views/administracion.ejs
@@ -94,21 +94,44 @@
                             <li class="has-sub">
                                 <a href="#">
                                     <i class="fas fa-inbox"></i>
-                                    <span class="bot-line"></span>Bloques</a>
+                                    <span class="bot-line"></span>Unidades</a>
                                 <ul class="header3-sub-list list-unstyled">
                                     <li>
-                                        <a href="#">Ver Bloques</a>
+                                        <a href="/viewUnidades">Ver Unidades</a>
                                     </li>
                                     <li>
-                                        <a href="#">Agregar Bloque</a>
+                                        <a href="/addUnidad">Agregar Unidad</a>
+                                    </li>
+                                    <li>
+                                        <a href="/addMantenimiento">Registrar Mantenimiento</a>
+                                    </li>
+                                    <li>
+                                        <a href="/viewMantenimientos">Control de mantenimientos</a>
                                     </li>
                                 </ul>
                             </li>
 
-                            <li>
+                            <li class="has-sub">
                                 <a href="#">
-                                    <i class="fas fa-usd"></i>
-                                    <span class="bot-line"></span>Precio Gas</a>
+                                    <i class="fas fa-inbox"></i>
+                                    <span class="bot-line"></span>Servicios</a>
+                                <ul class="header3-sub-list list-unstyled">
+                                    <li>
+                                        <a href="/gestionServicios">Gestion de Servicios</a>
+                                    </li>
+                                    <li>
+                                        <a href="/viewUnidadesServicios">Visualizar Unidades</a>
+                                    </li>
+                                    <li>
+                                        <a href="/verRutas">Visualizar Rutas</a>
+                                    </li>
+                                    <li>
+                                        <a href="/prepSum">Preparar Suministros</a>
+                                    </li>
+                                    <li>
+                                        <a href="/servicios">Organizar Servicios</a>
+                                    </li>
+                                </ul>
                             </li>
 
                         </ul>
@@ -210,15 +233,20 @@
                         </li>
                         <li class="has-sub">
                             <a class="js-arrow" href="#">
-                                <i class="fas fa-inbox"></i>Bloques</a>
+                                <i class="fas fa-inbox"></i>Unidades</a>
                             <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
                                 <li>
-                                    <a href="login.html">Gestión Bloques</a>
+                                    <a href="/viewUnidades">Ver Unidades</a>
                                 </li>
                                 <li>
-                                    <a href="register.html">Agregar bloques</a>
+                                    <a href="/addUnidad">Agregar Unidad</a>
                                 </li>
-                                
+                                <li>
+                                    <a href="/addUnidad">Registrar Mantenimiento</a>
+                                </li>
+                                <li>
+                                    <a href="/addUnidad">Control de mantenimientos</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
