CAMBIOS SEGUNDA ETAPA

--- a/views/administracion.ejs
+++ b/views/administracion.ejs
@@ -93,7 +93,7 @@
                             
                             <li class="has-sub">
                                 <a href="#">
-                                    <i class="fas fa-inbox"></i>
+                                    <i class="fas fa-truck"></i>
                                     <span class="bot-line"></span>Unidades</a>
                                 <ul class="header3-sub-list list-unstyled">
                                     <li>
@@ -117,19 +117,19 @@
                                     <span class="bot-line"></span>Servicios</a>
                                 <ul class="header3-sub-list list-unstyled">
                                     <li>
-                                        <a href="/gestionServicios">Gestion de Servicios</a>
+                                        <a href="/gestionServicios">Gestion de Servicios (General)</a>
                                     </li>
                                     <li>
-                                        <a href="/viewUnidadesServicios">Visualizar Unidades</a>
+                                        <a href="/viewUnidadesServicios">Visualizar Unidades (Inicio/Cierre)</a>
                                     </li>
                                     <li>
-                                        <a href="/verRutas">Visualizar Rutas</a>
+                                        <a href="/verRutas">Visualizar Rutas (Operador)</a>
                                     </li>
                                     <li>
-                                        <a href="/prepSum">Preparar Suministros</a>
+                                        <a href="/prepSum">Preparar Suministros (Generar Servicios)</a>
                                     </li>
                                     <li>
-                                        <a href="/servicios">Organizar Servicios</a>
+                                        <a href="/servicios">Organizar Servicios (Asignar Rutas)</a>
                                     </li>
                                 </ul>
                             </li>
