--- a/views/gestionServicios.ejs
+++ b/views/gestionServicios.ejs
@@ -185,8 +185,9 @@
                                             <th style="font-size: 12px;">Unidad</th>
                                             <th style="font-size: 12px;">Estatus</th>
                                             <th style="font-size: 12px;">LTS Vendidos</th>
-                                            <th style="font-size: 12px">TOTAL</th>
-                                            
+                                            <th style="font-size: 12px">TOTAL $</th>
+                                            <th style="font-size: 12px">Acciones   </th>
+
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -199,9 +200,13 @@
                                                     <td style="font-size: 12px;"><%= adminService.fecha %></td>
                                                     <td style="font-size: 12px;"><%= adminService.noEco %></td>
                                                     <td style="font-size: 12px;"><%= adminService.statusServicio %></td>
-                                                    <td style="font-size: 12px;"></td>
-                                                    <td style="font-size: 12px;"></td>
-                                                    
+                                                    <td style="font-size: 12px;">LTS.<input type="text" name="litrosAdmin" id="litrosAdmin_<%= adminService.noCliente %>"></td>
+                                                    <td style="font-size: 12px;">$<input type="text" name="totalAdmin" id="totalAdmin_<%= adminService.noCliente %>"></td>
+                                                    <td>
+                                                        <button class="item" data-toggle="tooltip" data-placement="top" title="Guardar" onclick="completaAdmin(<%= adminService.noCliente %>)">
+                                                            <i class="zmdi zmdi-save"></i>
+                                                        </button>
+                                                    </td>
                                                     
                                                 </tr>                                   
                                              <% }) %>
@@ -220,7 +225,8 @@
                                             <th style="font-size: 12px;">Unidad</th>
                                             <th style="font-size: 12px;">Estatus</th>
                                             <th style="font-size: 12px;">LTS Vendidos</th>
-                                            <th style="font-size: 12px">TOTAL</th>
+                                            <th style="font-size: 12px">TOTAL $</th>
+                                            <th style="font-size: 12px">Acciones</th>
                                             
                                         </tr>
                                     </thead>
@@ -234,9 +240,13 @@
                                                     <td style="font-size: 12px;"><%= sumService.fecha %></td>
                                                     <td style="font-size: 12px;"><%= sumService.noEco %></td>
                                                     <td style="font-size: 12px;"><%= sumService.statusServicio %></td>
-                                                    <td style="font-size: 12px;"></td>
-                                                    <td style="font-size: 12px;"></td>
-                                                    
+                                                    <td style="font-size: 12px;">LTS.<input type="text" name="litrosSum" id="litrosSum_<%= sumService.noCliente %>">    </td>
+                                                    <td style="font-size: 12px;">$<input type="text" name="totalSum" id="totalSum_<%= sumService.noCliente %>"></td>
+                                                    <td>
+                                                        <button class="item" data-toggle="tooltip" data-placement="top" title="Guardar" onclick="completaSum(<%= sumService.noCliente %>)">
+                                                            <i class="zmdi zmdi-save"></i>
+                                                        </button>
+                                                    </td>
                                                     
                                                 </tr>                                   
                                              <% }) %>
@@ -259,16 +269,18 @@
     </div>
 
     <script>
-        function guardarSeleccion(noCliente) {
-            const selectedOption = document.getElementById(`selectOption_${noCliente}`).value;
+        function completaAdmin(noCliente) {
+            const litrosAdmin = document.getElementById(`litrosAdmin_${noCliente}`).value;
+            const totalAdmin = document.getElementById(`totalAdmin_${noCliente}`).value;
+
         
-            if (!selectedOption) {
+            if (!litrosAdmin || !totalAdmin) {
                 alert('Selecciona una opción antes de guardar.');
                 return;
             }
         
             // Realizar una solicitud AJAX al servidor (Node.js) para guardar la opción en la base de datos
-            $.post('/updateAdminService', { noCliente: noCliente, selectedOption: selectedOption }, function(data) {
+            $.post('/completaAdmin', { noCliente: noCliente, litrosAdmin: litrosAdmin, totalAdmin:totalAdmin }, function(data) {
                 if (data.success) {
                     window.location.reload();
                 } else {
@@ -277,23 +289,18 @@
             });
         }
 
-        $(document).ready(function() {
-            // Inicializar el datepicker para cada campo de fecha
-            $(".datepicker").datepicker({
-                format: 'yyyy-mm-dd', // Formato de fecha deseado
-                autoclose: true
-            });
-        });
+       
 
-        function guardarSeleccion2(noCliente){
-            const selected = document.getElementById(`selected_${noCliente}`).value;
+        function completaSum(noCliente){
+            const litrosSum = document.getElementById(`litrosSum_${noCliente}`).value;
+            const totalSum = document.getElementById(`totalSum_${noCliente}`).value;
 
-            if(!selected){
+            if(!litrosSum || !totalSum){
                 alert('selecciona ruta antes de guardar');
                 return;
             }
 
-            $.post('/updateSumService', { noCliente: noCliente, selected: selected }, function(data) {
+            $.post('/completaSum', { noCliente: noCliente, litrosSum: litrosSum,totalSum:totalSum }, function(data) {
                 if (data.success) {
                     window.location.reload();
                 } else {
